2004-02-11  Nathaniel Smith  <njs@codesourcery.com>

	* qm/common.py: Import getpass.  
	(get_username): New function.
	* qm/test/execution_engine.py
	(ExecutionEngine._WriteInitialAnnotations): New method.
	(ExecutionEngine.Run): Call it.
	(TerminationRequested): New exception.
	(ExecutionEngine._RunTests): Raise it when terminating.
	(ExecutionEngine.Run): Check for exceptions in _RunTests.
	
	(ExecutionEngine.RequestTermination): More tracing.
	(ExecutionEngine.Run): Likewise.
	(ExecutionEngine._RunTests): Likewise.
	
2004-02-08  Mark Mitchell  <mark@codesourcery.com>

	* NEWS: Remove "Not yet released" markers from news for 2.1.

	* qm/test/web/web.py (ShowSuitePage.MakeDeleteScript): Return the
	result of MakeConfirmationDialog.

2004-02-04  Anders Hasselqvist <Anders.Hasselqvist@tss.teleca.se>

	* qm/fields.py (ChoiceField.FormatValueAsHtml): Make sure there is
	a name for the field.

2004-01-28  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/classes/explicit_suite.py (ExplicitSuite.is_implicit):
	Give it a default value of false.
	(ExplicitSuite.IsImplicit): Fix thinko.
	* qm/test/classes/xml_database.py (XMLDatabase._GetSuiteFromPath): 

2004-01-18  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/cmdline.py (_version_output): Add 2004 to list of
	copyright dates.

2004-01-15  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/classes/xml_database.py
	(XMLDatabase.__MakeDataFilePath): Use a relative, rather than
	absolute, path for the file location.

2004-01-14  Mark Mitchell  <mark@codesourcery.com>

	* qm/attachment.py (Attachment.Move): New method.
	(AttachmentStore.Store): Do not return a value.
	(TemporaryAttachmentStore.Store): Do not check
	is_temporary_location.
	(is_temporary_location): Remove.
	(make_dom_node): Do not check is_temporary_location.
	* qm/extension.py (Extension.MakeDomElement): Remove debugging
	code.
	* qm/fields.py (Field.GetSubfields): New method.
	(Field.ParseFormValue): Take a dictionary of attachment stores as